# zatat

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  zatat.toml.example
.github/workflows/: ci.yml  release.yml
bench/: README.md  run.sh  setup.sh  zatat.bench.toml
bench/scenarios/: broadcast-fanout.mjs  gen-wrk-script.mjs  ws-idle-ramp.mjs
crates/zatat-channels/: Cargo.toml
crates/zatat-channels/src/: channel.rs  lib.rs  manager.rs
crates/zatat-channels/tests/: proptest_invariants.proptest-regressions  proptest_invariants.rs
crates/zatat-cli/: Cargo.toml
crates/zatat-cli/src/: main.rs
crates/zatat-config/: Cargo.toml
crates/zatat-config/src/: lib.rs
crates/zatat-connection/: Cargo.toml
crates/zatat-connection/src/: connection.rs  lib.rs  rate_limit.rs
crates/zatat-core/: Cargo.toml
crates/zatat-core/src/: application.rs  channel_name.rs  error.rs  id.rs  lib.rs
crates/zatat-http/: Cargo.toml
crates/zatat-http/src/: lib.rs  routes.rs  sign.rs
crates/zatat-metrics/: Cargo.toml
crates/zatat-metrics/src/: lib.rs
crates/zatat-protocol/: Cargo.toml
crates/zatat-protocol/src/: auth.rs  encryption.rs  envelope.rs  http_sign.rs  inbound.rs  lib.rs  outbound.rs  presence.rs
crates/zatat-scaling/: Cargo.toml
crates/zatat-scaling/src/: dispatcher.rs  lib.rs  message.rs  peer_state.rs  presence_cache.rs  provider.rs  redis.rs
crates/zatat-webhooks/: Cargo.toml
crates/zatat-webhooks/src/: lib.rs
crates/zatat-ws/: Cargo.toml
crates/zatat-ws/src/: handler.rs  lib.rs  router.rs  state.rs  tasks.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decrypt_payload.rs  parse_inbound.rs  presence_from_members.rs  verify_http.rs
