[package]
name = "zatat-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "zatat"
path = "src/main.rs"

[dependencies]
zatat-core.workspace = true
zatat-config.workspace = true
zatat-channels.workspace = true
zatat-connection.workspace = true
zatat-protocol.workspace = true
zatat-ws.workspace = true
zatat-http.workspace = true
zatat-scaling.workspace = true
zatat-metrics.workspace = true
zatat-webhooks.workspace = true
tokio.workspace = true
axum.workspace = true
axum-server.workspace = true
tower-http.workspace = true
hyper.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
serde_json.workspace = true
metrics.workspace = true
