[package]
name = "zatat-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zatat-core.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
toml.workspace = true
thiserror.workspace = true
arc-swap.workspace = true
