[package]
name = "zatat-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zatat-core.workspace = true
zatat-config.workspace = true
zatat-channels.workspace = true
zatat-connection.workspace = true
zatat-protocol.workspace = true
zatat-scaling.workspace = true
zatat-webhooks.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex.workspace = true
tracing.workspace = true
hyper.workspace = true
