[package]
name = "zatat-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zatat-core.workspace = true
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
md-5.workspace = true
hex.workspace = true
subtle.workspace = true
crypto_secretbox.workspace = true
base64.workspace = true
rand.workspace = true
thiserror.workspace = true
