[package]
name = "zatat-webhooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zatat-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
