[package]
name = "zatat-ws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zatat-core.workspace = true
zatat-config.workspace = true
zatat-channels.workspace = true
zatat-connection.workspace = true
zatat-protocol.workspace = true
zatat-scaling.workspace = true
zatat-webhooks.workspace = true
zatat-metrics.workspace = true
axum.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
metrics.workspace = true
parking_lot.workspace = true
